# mloda-demo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
demo/: applydata_credit_xai.py
demo_data/: applications.db  applications.json  financial_overview_app-customer-a.xlsx  financial_overview_app-customer-b.xlsx  financial_overview_app-customer-c.xlsx  financial_overview_app-customer-d.xlsx  financial_overview_app-customer-e.xlsx  qa_app-customer-a.md  qa_app-customer-b.md  qa_app-customer-c.md  qa_app-customer-d.md  qa_app-customer-e.md
mloda_demo/: cli.py
mloda_demo/extenders/: __init__.py  lineage_extender.py
mloda_demo/feature_groups/classifier/: artifact.py  credit_risk_classifier_fg.py  encoder.py  mlp.py
mloda_demo/feature_groups/inputs/: applications_fg.py  applications_sqlite_fg.py  financials_fg.py  paths.py  questionnaire_fg.py
mloda_demo/xai/attribution/: base_attribution.py  gradient_attribution.py  model_artifact.py  zennit_attribution.py
mloda_demo/xai/visualization/: heatmap.py
scripts/: fetch_german_credit.py  spike_mlp_zennit.py  spike_tabpfn_zennit.py  synthesize_docs.py
tests/integration/: test_attribution_pipeline.py  test_cli_smoke.py  test_method_swap.py  test_notebook_smoke.py  test_prediction_pipeline.py
tests/unit/: test_applications_fg.py  test_classifier_fg.py  test_cli_acts.py  test_financials_fg.py  test_questionnaire_fg.py
