[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mloda-demo"
version = "0.1.0"
description = "Live demo: mixed-source features, MLP classifier, Zennit LRP attribution, orchestrated by mloda. Built for the applydata Berlin 2026 talk."
license = "Apache-2.0"
authors = [{ name = "Tom Kaltofen", email = "tom@mloda.ai" }]
dependencies = [
    "mloda>=0.5.4",
    "mloda-testing>=0.2.11",
    "pandas",
    "numpy",
    "openpyxl",
    "torch",
    "zennit",
    "openml",
    "matplotlib",
]
requires-python = ">=3.10"

[project.scripts]
mloda-demo = "mloda_demo.cli:main"

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    "pytest",
    "ruff",
    "mypy",
    "bandit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mloda_demo*"]

[tool.pytest.ini_options]
testpaths = ["mloda_demo", "tests"]
python_files = ["test_*.py"]
markers = [
    "slow: integration tests that load TabPFN / run attribution (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "^scripts/",
    "^demo/",
    "^\\.tox/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = [".tox", ".venv", "tests"]

